<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="enable_motion_detection">Enable Motion Detection</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="shake">Shake to keep the screen on</string>
    <string name="goingoff">Screen will go off if not shaken on next detection</string>
    <string name="stayingon">Screen will stay on</string>
    <string name="cb_motion_detection_enable">Motion Detection</string>
    <string name="disable_motion_detection">Disable Motion Detection</string>
    <string name="app_name">Eco Screen On</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="enable_service">Enable Service</string>
    <string name="set_angle">Adjust Inclination Angle</string>
    <string name="inclination_angle_0">0.0</string>
    <string name="deg">&#176;</string>
    <string name="motion_sensitivity">Adjust Motion Sensitivity</string>
    <string name="motion_sensitivity_zero">0</string>
    <string name="startup_options">Startup Options</string>
    <string name="notification_mode">Notification Mode</string>

    <string-array name="notif_spinner_entries">
        <item>Always Visible</item>
        <item>Always Hidden</item>
        <item>Visible When Detecting</item>
    </string-array>
    
    
    <string-array name="screen_timeo_spinner_entries">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>Invalid</item>
    </string-array>
    
        <string name="inclination_activates_screen">Simulation: incline device!</string>
        <string name="device_movement_activates_screen">Simulation: move device</string>
        
         <string name="inclination_doesnt_activate_screen">Simulation:  incline device</string>
        <string name="device_movement_doesnt_activate_screen">Simulation: shake device a little</string>
        <string name="current_timeout_is">Current Screen Timeout Is</string>
        <string name="default_timeout_s_60">60</string>
        <string name="seconds">s</string>
        <string name="start_detection_after_seconds">&quot;Detection Time&quot;</string>
        <string name="change_screen_timeout">Screen Timeout</string>
        <string name="make_tour">Make a Tour!</string>

</resources>