<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="12dp"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvStartupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startup_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/cbStartAtBoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_at_boot" />

    <CheckBox
        android:id="@+id/cbEnableService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_service" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="6dp">

            <TextView
                android:id="@+id/tvCurrentTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_timeout_is" 
            	android:padding="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvTimeoMs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_timeout_s_60" 
            android:padding="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds" 
            	android:padding="3dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_angle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp" >

            <SeekBar
                android:id="@+id/seekBarAngle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:max="10" />

            <TextView
                android:id="@+id/tvInclinationAngle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/inclination_angle_0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deg"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/tvInclination"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center|right"
            android:text="@string/inclination_activates_screen"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/imageViewAngleLed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="0.99"
            android:gravity="right"
            android:src="@drawable/ic_statusbar_off" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motion_sensitivity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:padding="6dp">

        <SeekBar
            android:id="@+id/seekBarMotionSensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:max="10" />

        <TextView
            android:id="@+id/tvMotionSensitivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/motion_sensitivity_zero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/tvMotion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center|right"
            android:text="@string/device_movement_activates_screen"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/imageViewSensitivityLed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="0.99"
            android:gravity="right"
            android:src="@drawable/ic_statusbar_off" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvNotificationMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notification_mode"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinNotificationMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="right"
            android:entries="@array/notif_spinner_entries"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>

</ScrollView>